Fix CSS issues on newer gtk3 versions (#177)
Every widget now as no border. Setup the progress bar and the notes
view to show nice scrollbars/progressbars.

Use multiple selectors for the same widgets since the gtk3 people changed
the selector names between their versions.

--- a/rc/pdfpc.css
+++ b/rc/pdfpc.css
@@ -1,13 +1,32 @@
 * {
     background-color: black;
     background-image: none;
+    border: none;
     color: white;
     font-family: Verdana;
 }
 
-/* .slider and .trough are parts of scrollbar */
-.slider, .progressbar {
-    border: none;
+scrolledwindow trough * {
+    background-color: gray;
+}
+
+scrolledwindow trough {
+    background-color: white;
+}
+
+progressbar trough * {
+    background-color: blue;
+}
+
+progressbar trough {
+    background-color: white;
+}
+
+GtkProgressBar * {
+    background-color: blue;
+}
+
+GtkProgressBar {
     background-color: white;
 }
 
@@ -19,14 +38,6 @@
         font-size: 5em;
     }
  */
-
-GtkProgressBar {
-    color: gray;
-}
-
-.trough {
-    border: none;
-}
 
 pdfpcTimerLabel.pretalk {
     color: green;
